# SearchFlow

./: .env.example  .gitignore  .pre-commit-config.yaml  MULTI_LLM_QUICKSTART.md  Makefile  QUICK_START.md  QWEN.md  README.md  SEARXNG_QUICK_START.md  SETUP_COMPLETE_MULTI_LLM.md  docker-compose.yml  example_multi_llm.py  mcp.json  pyproject.toml  requirements.txt  test_llm_setup.sh
.github/workflows/: build.yml  lint.yml  tests.yml
app/: __init__.py  main.py
app/ai/: __init__.py  dspy_pipeline.py  llm_providers.py  pipeline.py  signatures.py
app/api/: __init__.py  exports.py  models.py  routes.py  search.py
app/cache/: __init__.py  redis_client.py
app/core/: config.py  logging.py
app/mcp/: __init__.py  mcp_server.py  search_tool.py
app/output/: __init__.py  json_formatter.py  markdown_formatter.py
app/schemas/: search.py
app/search/: credibility.py  dspy_retriever.py  (+1 more)
docker/: Dockerfile.api
docs/: 0.master_index.md  1.project_explained.md  10.SETUP_COMPLETE.md  11.SEARXNG_INTEGRATION.md  12.DSPY_SEARXNG_INTEGRATION.md  2.Teach_Stack.md  3.project_structure.md  3.project_strucutre.md  4.step1_directory_and_files.md  5.step2_uv_setup.md  6.step3_docker_setup.md  7.step4_cicd_basics.md  8.step5_fastapi_implementation.md  9.CI_CD_SETUP.md  MULTI_LLM_SETUP.md  QUICK_REFERENCE.md  README.md
frontend/: Dockerfile  env.example  next.config.ts  package-lock.json
searxng/: limiter.toml  settings.yml
tests/: test_dspy_pipeline.py  test_e2e.py  test_health.py  test_multi_llm.py  test_search_api.py  test_searxng.py  test_searxng_integration.py
(+24 files in other folders)
